add progress bar

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,9 @@ dependencies {
     //other
     implementation 'com.jjoe64:graphview:4.2.2'
 
+    // Lifecycles only (without ViewModel or LiveData)
+    def lifecycle_version = "2.2.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+
 }
